fixed alignment of comments

--- a/src/Components/Comment.css
+++ b/src/Components/Comment.css
@@ -1,3 +1,7 @@
+.CommentForm {
+  margin-left: 2.4rem;
+}
+
 /* Commentlist is the entire comment section*/
 .CommentList {
   background-color: #E5E5E5;
@@ -7,28 +11,49 @@
   font-weight: 500;
   font-size: 1.6rem;
   line-height: 2.4rem;
+  margin-left: 2.4rem;
   color: #101828;
 }
 
 /*  Comment-list is an <li> and the Parent of the Comment Component. */
 .Comment-list {
-  position: relative;
+
 }
 
 /* Parent of the avatar and message text */
 .Comment {
   width: 88rem;
   height: 7.2rem;
+  display: flex;
   border-bottom: 1px solid #E4E7EC;
 }
 
 /* The entire comment (avatar + message text */
 .Comment-comment {
   margin-left: 2.4rem; 
+  padding-bottom: 1.6rem;
   display: flex;
   left: 0rem;
-  top: 3.2rem;
+  z-index: 10;
+  /* top: 3.2rem; */
   
+}
+
+.Comment-avatar {
+  margin-right: 1.2rem;
+  padding-top: 16px;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 2.8rem;
+  z-index: 1;
+  -webkit-border-radius: 2.8rem;
+  -moz-border-radius: 2.8rem;
+  -ms-border-radius: 2.8rem;
+  -o-border-radius: 2.8rem;
+}
+
+.Comment-time-posted {
+  color: #667085;
 }
 
 /* parent of the message text */
@@ -36,26 +61,24 @@
   color: #101828;
   font-size: 1.4rem;
   line-height: 2rem;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+}
+
+.Comment-username-wrapper {
+  margin-bottom: 0;
 }
 
 .Comment-username {
   font-weight: 500;
 }
 
-.Comment-time-posted {
-  color: #667085;
+.Comment-message {
+  margin: 0;
 }
 
-.Comment-avatar {
-  margin: 0 1.2rem 1.6rem 0;
-  height: 4rem;
-  width: 4rem;
-  border-radius: 2.8rem;
-  -webkit-border-radius: 2.8rem;
-  -moz-border-radius: 2.8rem;
-  -ms-border-radius: 2.8rem;
-  -o-border-radius: 2.8rem;
-}
 
 .Editform-avatar {
   margin: 0 1.2rem 0 0;
